# nbsv

./: .cookiecutter.yaml  .coveragerc  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  SETUP.md  babel.config.js  build.sh  bun.lockb  codecov.yml  install.json  jest.config.js  nbsv.json  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  webpack.config.js  webpack.prebuilt.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  publish-to-pypi.yml
css/: CheckBoxTreeSubmenu.css  agent_row.css  app.css  cameraControls.css  camera_controls.css  checkBoxTree.css  checkbox_contents.css  checkbox_row.css  checkbox_tree.css  colors.css  constants.css  meta_data_panel.css  model_display_data.css  playbackControls.css  playback_controls.css  scale_bar.css  sharedCheckBox.css  sharedCheckBoxTree.css  sidePanel.css  side_panel.css  starCheckBox.css  treeNode.css  viewer.css  viewerTitle.css  viewer_title.css  widget.css
docs/: Makefile  conf.py  environment.yml  index.rst  installation.rst  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/_static/: 182.embed-bundle.js  182.embed-bundle.js.map  564.embed-bundle.js  564.embed-bundle.js.map  embed-bundle.js.LICENSE.txt  vendors-node_modules_aics_simularium-viewer_es_visGeometry_workers_KMeansWorker_js.embed-bundle.js  vendors-node_modules_aics_simularium-viewer_es_visGeometry_workers_KMeansWorker_js.embed-bundle.js.map  vendors-node_modules_aics_simularium-viewer_es_visGeometry_workers_visDataWorker_js.embed-bundle.js  vendors-node_modules_aics_simularium-viewer_es_visGeometry_workers_visDataWorker_js.embed-bundle.js.map
examples/: data_as_string.ipynb  example.simularium  introduction copy.ipynb  introduction.ipynb
nbsv/: __init__.py  _frontend.py  _version.py  example.py  viewer.py
nbsv/app/: babel.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
nbsv/app/src/: Viewer.tsx  extensions.ts  index.ts  plugin.ts  version.ts  widget.ts
nbsv/examples/: introduction.ipynb
nbsv/nbextension/: extension.js
nbsv/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: AgentVisibilityContext.tsx  App.tsx  ConfigProvider.tsx  Viewer.tsx  constants.ts  extension.ts  hooks.ts  index.ts  plugin.ts  selectors.ts  types.ts  util.tsx  utils.ts  version.ts  widget.ts  widget.tsx
src/__tests__/: index.spec.ts  selectors.spec.ts  setup.ts  utils.spec.ts  utils.ts
src/assets/: svgs.tsx
src/components/: AgentRow.tsx  CameraControls.tsx  CheckBox.tsx  CheckBoxContents.tsx  CheckBoxRow.tsx  CheckBoxTree.tsx  CheckBoxTreeSubmenu.tsx  CheckboxRow.tsx  ChildHideCheckbox.tsx  ChildHighlightCheckbox.tsx  ColorSwatch.tsx  CustomCheckbox.tsx  HideAllAgentsCheckbox.tsx  HideCheckbox.tsx  HideCheckox.tsx  HighlightCheckbox.tsx  Icons.tsx  MetaDataPanel.tsx  ModelDisplayData.tsx  PlaybackControls.tsx  ScaleBar.tsx  SharedCheckBox.tsx  SidePanel.tsx  StarCheckBox.tsx  TreeNode.tsx  ViewerTitle.tsx  collapseMotion.tsx  raf.ts
src/components/Icons/: index.tsx
