[build-system]
requires = ["hatchling>=1.3.1", "jupyterlab==3.*"]
build-backend = "hatchling.build"

[project]
name = "nbsv"
version = "0.1.1"
description = "Simularium Viewer Jupyter Widget "
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [{ name = "Megan Riel-Mehan", email = "meganr@alleninstitute.org" }]
keywords = ["IPython", "Jupyter", "Widgets"]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipydatawidgets>=4.3.2",
    "ipywidgets>=8.0.4",
    "jupyter-packaging>=0.12.3",
    "jupyter>=1.0.0",
    "jupyterlab>=3.5.2",
    "numpy>=1.14.3",
]

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = ["simulariumio", "numpy"]
test = ["nbval", "pytest-cov", "pytest>=7.1", "tbump"]

[project.urls]
Homepage = "https://github.com/simularium/nbsv"

[tool.hatch.build]
artifacts = [
    "nbsv/nbextension/index.*",
    "nbsv/labextension/*.tgz",
    "nbsv/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"nbsv/nbextension" = "share/jupyter/nbextensions/nbsv"
"nbsv/labextension" = "share/jupyter/labextensions/nbsv"
"./install.json" = "share/jupyter/labextensions/nbsv/install.json"
"./nbsv.json" = "etc/jupyter/nbconfig/notebook.d/nbsv.json"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "nbsv/nbextension/index.js",
    "nbsv/labextension/package.json",
]
skip-if-exists = ["nbsv/nbextension/index.js", "nbsv/labextension/package.json"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
file = [
    { src = "package.json", search = '"version": "{current_version}"' },
    { src = "pyproject.toml", version_template = "{major}.{minor}.{patch}", search = 'version = "{current_version}"'},
    { src = "nbsv/_version.py", version_template = '({major}, {minor}, {patch})', search = "version_info = {current_version}" },
]

[tool.tbump.version]
current = "0.1.1"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
